Fixed dashboard link spacing

--- a/app/assets/stylesheets/BY_styles.css
+++ b/app/assets/stylesheets/BY_styles.css
@@ -2283,5 +2283,5 @@ display: none;}
 }
 
 .top-element{
-  margin-top: 179px;
+  margin-top: 120px;
 }
