--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,3 +31,9 @@
   background-color: #C6B8C2;
   cursor: pointer;
 }
+
+.dashboard-link {
+  /*  position:absolute; display:inline; top:11rem; left: 10rem;*/
+    float:left;
+    margin-top:-4rem;
+  }
